--- a/index.html
+++ b/index.html
@@ -1,55 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>FoC - NOT Gate</title>
+<title>FoC</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
+<body style="margin:0; padding:0; background-color:#ffb347;">
 
 <center>
-<section class="section-box">
-    <h2>Project 1: Not Gate</h2>
+<section style="padding:20px;">
+<h2>Project 1: Not Gate</h2>
 
-    <div class="row">
+<div class="row" style="display:flex; justify-content:center; align-items:center; gap:30px;">
 
-        <!-- INPUT -->
-        <div class="column">
-            <h2>Input</h2>
+  <!-- INPUT -->
+  <div class="column" style="background-color:#ffbe73; padding:20px; border-radius:10px;">
+    <h2>Input</h2>
 
-            <p>
-                <button style="width: 100px; height: 40px;"
-                        onclick="document.getElementById('belizeImage').src='Images/noton2.png'">
-                    ON
-                </button>
-            </p>
+    <p>
+      <button style="width: 100px; height: 40px;" 
+              onclick="document.getElementById('belizeImage').src='Images/noton2.png'">
+        ON
+      </button>
+    </p>
 
-            <p>
-                <button style="width: 100px; height: 40px;"
-                        onclick="document.getElementById('belizeImage').src='Images/notoff2.png'">
-                    OFF
-                </button>
-            </p>
-        </div>
+    <p>
+      <button style="width: 100px; height: 40px;" 
+              onclick="document.getElementById('belizeImage').src='Images/notoff2.png'">
+        OFF
+      </button>
+    </p>
+  </div>
 
-        <!-- OUTPUT -->
-        <div class="column">
-            <h2>Output</h2>
-            <hr>
-            <img id="belizeImage" src="Images/noton2.png" width="400" height="86">
-        </div>
+  <!-- OUTPUT -->
+  <div class="column" style="background-color:#ffc87f; padding:20px; border-radius:10px;">
+    <h2>Output</h2>
+    <hr>
+    <img id="belizeImage" src="Images/noton2.png" width="400" height="86">
+  </div>
 
-    </div>
+</div>
 
-    <div style="margin-top: 10px;">
-        <a href="index.html" style="font-weight:bold;">Back to Projects</a>
-    </div>
+<!-- Reduced space between Back to Home and Footer -->
+<div style="margin-top:5px;">
+  <a href="index.html">Back to Projects</a>
+</div>
+
 </section>
 </center>
 
-<footer>
+<footer style="padding:5px 0; margin-top:0;">
   <p>@ Powered by UB</p>
 </footer>
 
