--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
     <p>
       <button style="width: 100px; height: 40px;" 
-              onclick="document.getElementById('belizeImage').src='notGate/Images/noton2.png'">
+              onclick="document.getElementById('belizeImage').src='notGate-Images/noton2.png'">
         ON
       </button>
     </p>
 
     <p>
       <button style="width: 100px; height: 40px;" 
-              onclick="document.getElementById('belizeImage').src='notGate/Images/notoff2.png'">
+              onclick="document.getElementById('belizeImage').src='notGate-Images/notoff2.png'">
         OFF
       </button>
     </p>
@@ -38,7 +38,7 @@
   <div class="column" style="background-color:#ffc87f; padding:20px; border-radius:10px;">
     <h2>Output</h2>
     <hr>
-    <img id="belizeImage" src="notGate/Images/noton2.png" width="400" height="86">
+    <img id="belizeImage" src="notGate-Images/noton2.png" width="400" height="86">
   </div>
 
 </div>
