--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>FoC</title>
+<title>Not Gate</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+  /* Style for Back to Projects link like a button */
+  .back-link {
+    display: block;
+    margin-top: 20px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #004d40;
+  }
+
+</style>
 </head>
 
 <body style="margin:0; padding:0; background-color:#ffb347;">
@@ -21,14 +32,14 @@
 
     <p>
       <button style="width: 100px; height: 40px;" 
-              onclick="document.getElementById('belizeImage').src='notGate-Images/noton2.png'">
+              onclick="document.getElementById('belizeImage').src='Images/noton2.png'">
         ON
       </button>
     </p>
 
     <p>
       <button style="width: 100px; height: 40px;" 
-              onclick="document.getElementById('belizeImage').src='notGate-Images/notoff2.png'">
+              onclick="document.getElementById('belizeImage').src='Images/notoff2.png'">
         OFF
       </button>
     </p>
@@ -38,14 +49,14 @@
   <div class="column" style="background-color:#ffc87f; padding:20px; border-radius:10px;">
     <h2>Output</h2>
     <hr>
-    <img id="belizeImage" src="notGate-Images/noton2.png" width="400" height="86">
+    <img id="belizeImage" src="Images/noton2.png" width="400" height="86">
   </div>
 
 </div>
 
 <!-- Reduced space between Back to Home and Footer -->
 <div style="margin-top:5px;">
-  <a href="index.html">Back to Projects</a>
+  <a href="project.html" class="back-link">Back to Projects</a>
 </div>
 
 </section>
