--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <!-- Reduced space between Back to Home and Footer -->
 <div style="margin-top:5px;">
-  <a href="project.html" class="back-link">Back to Projects</a>
+  <a href="index.html" class="back-link">Back to Projects</a>
 </div>
 
 </section>
